--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
         "mews/purifier": "^3.4",
         "spatie/laravel-permission": "^6.7"
