--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.2",
+        "dasundev/livewire-dropzone": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2",
         "laravel/fortify": "^1.25",
