--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
         "mantix/livewire-jodit-text-editor": "^1.6",
+        "mews/captcha": "^3.3",
         "mews/purifier": "^3.4",
         "spatie/laravel-permission": "^6.7"
     },
